Cambiar paths API. closes #145
